Implementação da Página create-points Implementação da API de MAPAS

--- a/web/src/pages/CreatePoint/styles.css
+++ b/web/src/pages/CreatePoint/styles.css
@@ -64,6 +64,8 @@
   font-size: 14px;
   font-weight: normal;
   color: var(--text-color);
+  justify-content: right;
+  
 }
 
 #page-create-point form .field-group {
